--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
     <html>
       <head>
   		<base href="/">
-        <title>Training App</title>
+        <title>Health Activity Visualization Center</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
